# AstroCameraRemote

./: .gitignore  AstroCameraRemote.pro  AstroImage.pro  CMakeLists.txt  LiveView_Commands.h  LiveView_Info.cpp  LiveView_Info.h  LiveView_Info.html  LiveView_Reader.cpp  LiveView_Reader.h  LiveView_ReaderThread.cpp  LiveView_ReaderThread.h  LiveView_Settings.cpp  LiveView_Settings.h  LiveView_ThreadInfo.cpp  LiveView_ThreadInfo.h  LiveView_Widget.cpp  LiveView_Widget.h  LiveView_Widget.ui  MainWindow.cpp  MainWindow.cpp.autosave  MainWindow.h  MainWindow.ui  Night.css  PostView_Widget.cpp  PostView_Widget.h  PostView_Widget.ui  Sequencer_Countdown_Msg.html  Sequencer_Normal_Msg.html  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Settings_General.cpp  Settings_General.h  SonyAlphaRemote.pro  SonyAlphaRemote_BatteryInfo.cpp  SonyAlphaRemote_BatteryInfo.h  SonyAlphaRemote_BulbShootSequencer.cpp  SonyAlphaRemote_BulbShootSequencer.h  SonyAlphaRemote_Helper.cpp  (+56 more)
AstroBase/: AstroBase.cpp  AstroBase.h  AstroBase.pro  AstroBase_Exception.cpp  AstroBase_Exception.h  AstroBase_MessageBox.cpp  AstroBase_MessageBox.h  AstroBase_PersistentDirInfo.cpp  AstroBase_PersistentDirInfo.h  CMakeLists.txt  astrobase_global.h
BatchProcess/: BatchProcess.cpp  BatchProcess.h  BatchProcess.pro  BatchProcess_ImageSignal.cpp  BatchProcess_ImageSignal.h  BatchProcess_Manager.cpp  BatchProcess_Manager.h  BatchProcess_NumericSignal.cpp  BatchProcess_NumericSignal.h  BatchProcess_NumericValueDialog.cpp  BatchProcess_NumericValueDialog.h  BatchProcess_NumericValueDialog.ui  BatchProcess_PixelMathTask.cpp  BatchProcess_PixelMathTask.h  BatchProcess_Processor.cpp  BatchProcess_Processor.h  BatchProcess_RawImageGrabber.cpp  BatchProcess_RawImageGrabber.h  BatchProcess_SaveImagesEditDlg.cpp  BatchProcess_SaveImagesEditDlg.h  BatchProcess_SaveImagesEditDlg.ui  BatchProcess_SaveImagesTask.cpp  BatchProcess_SaveImagesTask.h  BatchProcess_SelectFilesDialog.cpp  BatchProcess_SelectFilesDialog.h  BatchProcess_SelectFilesDialog.ui  BatchProcess_Signal.cpp  BatchProcess_Signal.h  BatchProcess_StackImagesTask.cpp  BatchProcess_StackImagesTask.h  BatchProcess_Task.cpp  BatchProcess_Task.h  BatchProcess_TaskInterface.h  BatchProcess_Visual_Connection.cpp  BatchProcess_Visual_Connection.h  BatchProcess_Visual_GraphicsScene.cpp  BatchProcess_Visual_GraphicsScene.h  BatchProcess_Visual_Pin.cpp  BatchProcess_Visual_Pin.h  BatchProcess_Visual_Task.cpp  (+5 more)
DataFormat/: CMakeLists.txt  DataFormat.pro
DataFormat/Fits/: CMakeLists.txt  Fits.pro  Fits_File.cpp  Fits_File.h  fits.cpp  fits.h  fits_global.h
EasyExif/: CMakeLists.txt  EasyExif.pro  EasyExif_Exif.cpp  EasyExif_Exif.h  easyexif_global.h
Setup/: Setup.pro
Setup/config/: config.xml
app/: CMakeLists.txt  app.pro
app/AstroCameraRemote/: AstroCameraRemote.pro  BatchProcess_FitsRepair.cpp  BatchProcess_FitsRepair.h  BatteryInfo.cpp  BatteryInfo.h  CMakeLists.txt  Helper.cpp  Helper.h  ImageView.cpp  ImageView.h  ImageViewZoomControl.cpp  ImageViewZoomControl.h  ImageViewZoomControl.ui  Json_Command.cpp  Json_Command.h  Json_GetEvent.cpp  Json_GetEvent.h  LiveView_Commands.cpp  LiveView_Commands.h  LiveView_ImageQueue.cpp  LiveView_ImageQueue.h  LiveView_Info.cpp  LiveView_Info.h  LiveView_Info.html  LiveView_Reader.cpp  LiveView_Reader.h  LiveView_ReaderThread.cpp  LiveView_ReaderThread.h  LiveView_Settings.cpp  LiveView_Settings.h  LiveView_Widget.cpp  LiveView_Widget.h  LiveView_Widget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessagePoster.cpp  MessagePoster.h  Night.css  PostView_ImageLoader.cpp  (+126 more)
app/AstroCameraRemote/Json/: .cmake  Command.cpp  Command.h  GetEvent.cpp  GetEvent.h
app/AstroCameraRemote/LiveView/: .cmake  Commands.cpp  Commands.h  ImageQueue.cpp  Info.cpp  Info.h  LiveView_Widget.ui  Reader.cpp  Reader.h  ReaderThread.cpp  ReaderThread.h  Settings.cpp  Settings.h  Widget.cpp  Widget.h
app/AstroCameraRemote/PostView/: .cmake  ImageLoader.cpp  ImageLoader.h  Info.cpp  Info.h  Info.html  PostView_Widget.ui  Widget.cpp  Widget.h
app/AstroCameraRemote/Sequencer/: .cmake  Base.cpp  Base.h  BulbShootSequencer.cpp  BulbShootSequencer.h  ControlWidget.cpp  ControlWidget.h  CreateNewDialog.cpp  CreateNewDialog.h  NormalShootSequencer.cpp  NormalShootSequencer.h  PhotoShot.cpp  PhotoShot.h  Properties.cpp  Properties.h  Protocol.cpp  Protocol.h  ProtocolModel.cpp  ProtocolModel.h  ProtocolView.cpp  ProtocolView.h  Sequencer_ControlWidget.ui  Sequencer_CreateNewDialog.ui  StateBase.cpp  StateBase.h  StateBulbShooting.cpp  StateBulbShooting.h  StateFinish.cpp  StateFinish.h  StateNormalShooting.cpp  StateNormalShooting.h  StatePause.cpp  StatePause.h  StateWaitForCamReady.cpp  StateWaitForCamReady.h  StateWaitForStart.cpp  StateWaitForStart.h
app/AstroCameraRemote/StarTrack/: .cmake  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  LenseGraphcisScene.cpp  LenseGraphcisScene.h  Marker.cpp  Marker.h  Settings.cpp  Settings.h  StarInfo.cpp  StarTrackView.cpp  StarTrackView.h  StarTrack_StarTrackView.ui  Tracker.cpp  Tracker.h
app/AstroCameraRemote/hfd/: .cmake  Hfd_Calculator.cpp  Hfd_Calculator.h
app/AstroImageStacker/: AstroImageStacker.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
app/CameraSimulator/: CamSim_HttpServer.cpp  CamSim_HttpServer.h  CameraSimulator.pro  main.cpp
cmake/: msvc.cmake  qt.cmake
features/win32/: setup.prf
hfd/: Hfd_Calculator.cpp  Hfd_Calculator.h
include/AstroBase/: AstroBase  Exception  MessageBox  PersistentDirInfo
include/BatchProcess/: RawImageGrabber  SelectFilesDialog  TaskInterface
include/EasyExif/: Exif
plugins/: plugins.pro
plugins/FitsImagePlugin/: FitsImagePlugin.pro  FitsImagePluginMetadata.json  FitsImagePlugin_ImageIOHandler.cpp  FitsImagePlugin_ImageIOHandler.h  FitsImagePlugin_ImageIOPlugin.cpp  FitsImagePlugin_ImageIOPlugin.h  fitsimageplugin.h  fitsimageplugin_global.h
plugins/PluginManager/: PluginManager.cpp  PluginManager.h  PluginManager.pro  PluginManager_IImageFilePlugin.cpp  PluginManager_IImageFilePlugin.h
plugins/PluginTest/: PluginTest.pro  (+3 more)
(+12 files in other folders)
